apps/staging/nextcloud/collabora-httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud-collabora
  namespace: default
spec:
  parentRefs:
    - name: myrobertson-com-gateway
      namespace: default
      sectionName: office
  hostnames: ["office.staging.myrobertson.net"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextcloud-collabora
          port: 9980
