apps/staging/nextcloud/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nextcloud
  annotations:
    cert-manager.io/cluster-issuer: vault-issuer
    cert-manager.io/common-name: cloud.staging.myrobertson.net
    cert-manager.io/private-key-algorithm: "ECDSA"
spec:
  gatewayClassName: istio
  listeners:
    - name: nextcloud
      hostname: cloud.staging.myrobertson.net
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: nextcloud-cert
  infrastructure:
    labels:
      istio-injection: enabled
    annotations:
      external-dns.alpha.kubernetes.io/hostname: cloud.staging.myrobertson.net
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
spec:
  parentRefs:
    - name: nextcloud
  hostnames: ["cloud.staging.myrobertson.net"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextcloud
          port: 80
