apps/staging/nextcloud/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  namespace: default
spec:
  parentRefs:
    - name: myrobertson-com-gateway
      namespace: default
      sectionName: cloud
  hostnames: ["cloud.staging.myrobertson.net"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextcloud
          port: 80
